# f1Telemetry

./: .env.example  .gitignore  README.md  compose.yaml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 20260721_01_initial_storage.py  20260721_02_feature_storage.py  20260721_03_anomaly_storage.py
backend/src/f1_telemetry/: __init__.py
backend/src/f1_telemetry/api/: main.py
backend/src/f1_telemetry/api/routes/: health.py  imports.py
backend/src/f1_telemetry/core/: __init__.py  config.py  redis.py
backend/src/f1_telemetry/detection/: __init__.py  calculator.py  cli.py  pipeline.py
backend/src/f1_telemetry/features/: __init__.py  calculator.py  cli.py  pipeline.py
backend/src/f1_telemetry/ingestion/: __init__.py  importer.py  jobs.py  models.py
backend/src/f1_telemetry/storage/: __init__.py  base.py  database.py  models.py  persistence.py
backend/src/f1_telemetry/worker/: __main__.py  main.py
backend/tests/: test_api.py  test_config.py  test_detection.py  test_features.py  test_importer.py  test_jobs.py  test_storage.py
docs/: ANOMALY_DETECTION.md  FEATURE_PIPELINE.md  MVP_SPEC.md  STORAGE.md
frontend/: .dockerignore  .prettierrc.json  Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
frontend/app/api/health/: route.test.ts  route.ts
