[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "f1-telemetry-backend"
version = "0.1.0"
description = "API and background worker for F1 telemetry anomaly detection"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic==1.18.5",
    "fastapi==0.139.2",
    "fastf1==3.8.3",
    "pandas==2.3.3",
    "pyarrow==25.0.0",
    "psycopg[binary]==3.3.4",
    "pydantic-settings==2.14.2",
    "redis==8.0.1",
    "rq==2.10.0",
    "sqlalchemy==2.0.51",
    "uvicorn[standard]==0.51.0",
]

[project.optional-dependencies]
dev = [
    "fakeredis==2.36.2",
    "httpx==0.28.1",
    "pytest==9.1.1",
    "ruff==0.15.22",
]

[project.scripts]
f1-api = "f1_telemetry.api.main:run"
f1-worker = "f1_telemetry.worker.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
